--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-markdown": "^10.1.0",
     "lucide-react": "^0.563.0",
     "react-dom": "^19.2.4",
-    "groq-sdk": "^0.37.0"
+    "groq-sdk": "^0.37.0",
+    "@google/genai": "^1.40.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
