--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lucide-react": "^0.344.0",
     "react-markdown": "^9.0.1",
     "groq-sdk": "^0.9.0",
-    "@google/genai": "^0.1.0",
+    "@google/genai": "latest",
     "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.1"
   },
