--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -14,7 +14,7 @@
     "lucide-react": "^0.344.0",
     "react-markdown": "^9.0.1",
     "groq-sdk": "^0.9.0",
-    "@google/genai": "latest",
+    "@google/genai": "^0.2.0",
     "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.1"
   },
